Simplified endpoint to mock database. Fixed css on mobile view with incidences

--- a/frontEnd/src/app/incidence/incidence.component.css
+++ b/frontEnd/src/app/incidence/incidence.component.css
@@ -33,15 +33,17 @@ img {
     width: 100%;
     height: 100%;
   }
+
   img+span.badge {
     position: relative;
     font-size: 15px;
-    bottom: 7.2em;
+    bottom: 10.2em;
     right: -96%;
     background-color: red;
     width: 8%;
     height: 23px;
   }
+  
   .margin_thumbnail {
     margin-top: 15px;
   }
